Added integration with hl7parser  + code refactor
