# src/controllers/Metadata.js
@@ -1,3 +1,4 @@
+/*jshint esversion: 6 */
 'use strict';
 
 var util = require('util');
@@ -7,13 +8,13 @@ var Metadata = require('../service/MetadataService');
 
 
 module.exports.getMetadata = function getMetadata (req, res, next) {
-  var user = req.swagger.params['user'].value;
+  var operator = req.swagger.params['operator'].value;
   var resourceid = req.swagger.params['resourceid'].value;
   Metadata.doGetMetadata(resourceid)
-    .then(function (response) {	
-      utils.writeJson(res, JSON.stringify(response.Metadata));
+    .then(function (data) {	
+        utils.writeJson(res, data.Body.toString());
     })
     .catch(function (err, data) {
-    	utils.writeJson(res, JSON.stringify(err.message), err.statusCode);	   
+    	utils.writeJson(res, JSON.stringify(err.code), err.statusCode);	   
     });
 };
